--- a/apps/phone/package.json
+++ b/apps/phone/package.json
@@ -6,77 +6,76 @@
   "license": "CC-BY-NC-SA-4.0",
   "homepage": "/dist/html",
   "dependencies": {
-    "@babel/runtime": "^7.17.2",
-    "@emotion/css": "^11.10.5",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/lab": "^5.0.0-alpha.131",
-    "@mui/material": "^5.13.2",
-    "@mui/styles": "^5.13.2",
+    "@babel/runtime": "^7.22.11",
+    "@emotion/css": "^11.11.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.7",
+    "@mui/lab": "5.0.0-alpha.142",
+    "@mui/material": "5.14.7",
     "@npwd/ui": "workspace:^1.0.0",
     "class-variance-authority": "^0.4.0",
-    "dayjs": "^1.11.7",
-    "emoji-mart": "^3.0.1",
-    "fivem-nui-react-lib": "^2.3.13",
+    "dayjs": "^1.11.9",
+    "emoji-mart": "5.5.2",
+    "fivem-nui-react-lib": "2.3.13",
     "history": "^5.3.0",
     "i18next": "^20.6.1",
-    "jest": "^27.4.7",
-    "jsonschema": "^1.4.0",
+    "jest": "^27.5.1",
+    "jsonschema": "^1.4.1",
     "lucide-react": "^0.125.0",
     "notistack": "3.0.0-alpha.7",
     "parse-path": "^7.0.0",
-    "parse-url": "^5.0.7",
-    "qs": "^6.9.6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-i18next": "^11.14.3",
-    "react-virtuoso": "^4.3.8",
+    "parse-url": "^5.0.8",
+    "qs": "^6.11.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-i18next": "^11.18.6",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "^5.0.0",
+    "react-router-dom": "^5.3.4",
+    "react-scripts": "^5.0.1",
     "react-uuid": "^1.0.3",
+    "react-virtuoso": "^4.5.0",
     "recoil": "^0.7.7",
-    "tailwind-merge": "^1.10.0",
+    "tailwind-merge": "^1.14.0",
     "uuid": "^8.3.2",
-    "xss": "^1.0.13"
+    "xss": "^1.0.14"
   },
   "devDependencies": {
-    "@sentry/integrations": "^6.15.0",
-    "@sentry/react": "^5.29.2",
-    "@sentry/tracing": "^5.29.2",
-    "@sentry/webpack-plugin": "^1.18.3",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
+    "@sentry/integrations": "^6.19.7",
+    "@sentry/react": "7.66.0",
+    "@sentry/tracing": "^5.30.0",
+    "@sentry/webpack-plugin": "^1.20.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "14.0.0",
     "@testing-library/react-hooks": "^7.0.2",
-    "@types/howler": "^2.2.4",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^14.17.34",
+    "@types/howler": "^2.2.8",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^14.18.56",
     "@types/parse-path": "^6.0.0",
-    "@types/qs": "^6.9.5",
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-router-dom": "^5.3.2",
-    "@welldone-software/why-did-you-render": "^6.2.3",
-    "autoprefixer": "^10.4.14",
-    "babel-loader": "^8.2.3",
+    "@types/qs": "^6.9.8",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^16.9.19",
+    "@types/react-router-dom": "^5.3.3",
+    "@welldone-software/why-did-you-render": "7.0.1",
+    "autoprefixer": "^10.4.15",
+    "babel-loader": "^8.3.0",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.7.3",
+    "css-loader": "^6.8.1",
     "dotenv": "^10.0.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "postcss": "^8.4.21",
+    "html-webpack-plugin": "^5.5.3",
+    "postcss": "^8.4.29",
     "postcss-loader": "^6.2.1",
-    "prettier-plugin-tailwindcss": "^0.2.4",
-    "style-loader": "^3.3.1",
+    "prettier-plugin-tailwindcss": "^0.2.8",
+    "style-loader": "^3.3.3",
     "svg-loader": "^0.0.2",
-    "tailwindcss": "^3.2.7",
-    "ts-loader": "^9.4.2",
+    "tailwindcss": "^3.3.3",
+    "ts-loader": "^9.4.4",
     "typescript": "^4.9.5",
-    "webpack": "^5.74.0",
+    "webpack": "^5.88.2",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
     "i18n:missing": "node --experimental-json-modules i18n.missingKeys.js",
