--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,16 +14,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@headlessui/react": "^1.7.13",
-    "@types/node": "^18.15.0",
-    "@types/react": "^18.2.6",
+    "@headlessui/react": "^1.7.17",
+    "@types/node": "^18.17.12",
+    "@types/react": "^18.2.21",
     "class-variance-authority": "^0.4.0",
-    "prettier": "^2.8.3",
-    "prettier-plugin-tailwindcss": "^0.2.4",
-    "react": "^17.0.2",
-    "tailwind-merge": "^1.10.0",
-    "tailwindcss": "^3.2.7",
-    "tsup": "^6.6.3",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8",
+    "react": "18.2.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "^3.3.3",
+    "tsup": "^6.7.0",
     "typescript": "^4.9.5"
   }
 }
